Update projects on index page

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 									</a></h2>
 									<p>App allowing restaurants to easily create mobile-friendly menus so diners can enjoy the best possible experience</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="https://github.com/menu-ify/menu-ify-fe" class="image main"><img src="images/menu_photo.jpeg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/menu-ify/menu-ify-fe" target="_blank" class="button large">View Project</a></li>
 								</ul>
@@ -88,7 +88,7 @@
 										<h2><a href="https://github.com/gabrielcnunez/lunch_and_learn">Lunch <br />
 										and Learn</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="https://github.com/gabrielcnunez/lunch_and_learn" class="image fit"><img src="images/lunch-learn.jpeg" alt="" /></a>
 									<p>Back end service consuming external APIs and aggregating data to expose endpoints for use by front end application.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/gabrielcnunez/lunch_and_learn" class="button">View Project</a></li>
@@ -97,55 +97,58 @@
 								<article>
 									<header>
 										<!-- <span class="date">April 22, 2017</span> -->
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<h2><a href="https://github.com/gabrielcnunez/tea_for_one">Tea<br />
+										for One</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/gabrielcnunez/tea_for_one" class="image fit"><img src="images/tea_cup.jpeg" alt="" /></a>
+									<p>
+										Rails API application for a fictional tea subscription service, built to simulate a take-home techincal challenge
+										required to be complete within eight-hour time box.
+									</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/gabrielcnunez/tea_for_one" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<!-- <span class="date">April 18, 2017</span> -->
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<h2><a href="https://github.com/gabrielcnunez/spring-assignment-quiz-api-gabrielcnunez">Quiz<br />
+										API</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/gabrielcnunez/spring-assignment-quiz-api-gabrielcnunez" class="image fit"><img src="images/quiz.jpeg" alt="" /></a>
+									<p>Java with Spring RESTful API with basic CRUD functionality for creating, modify, and deleting quiz questions. </p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/gabrielcnunez/spring-assignment-quiz-api-gabrielcnunez" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<!-- <span class="date">April 14, 2017</span> -->
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<h2><a href="https://github.com/gabrielcnunez/text-notification-python">Notify<br />
+										Me</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/gabrielcnunez/text-notification-python" class="image fit"><img src="images/texting.jpeg" alt="" /></a>
+									<p>Application containing seven endpoints for creating, reading, and updating templates and notifications, along with robust testing for both happy and sad user paths.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/gabrielcnunez/text-notification-python" class="button">View Project</a></li>
 									</ul>
 								</article>
-								<article>
-									<header>
+								<!-- <article>
+									<header> -->
 										<!-- <span class="date">April 11, 2017</span> -->
-										<h2><a href="#">Odio magna<br />
+										<!-- <h2><a href="#">Odio magna<br />
 										sed consectetur</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
+										<li><a href="#" class="button">View Project</a></li> -->
+									<!-- </ul>
+								</article> -->
+								<!-- <article>
+									<header> -->
 										<!-- <span class="date">April 7, 2017</span> -->
-										<h2><a href="#">Augue lorem<br />
+										<!-- <h2><a href="#">Augue lorem<br />
 										primis vestibulum</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
@@ -153,7 +156,7 @@
 									<ul class="actions special">
 										<li><a href="#" class="button">View Project</a></li>
 									</ul>
-								</article>
+								</article> -->
 							</section>
 
 						<!-- Footer -->
