--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 										'Accept': 'application/json'
 									},
 									success: function(data) {
-										$('#bio').text(data.bio);
+										$('#bio').text(data.bio)
 									},
 									error: function() {
-										$('#bio').text('Error loading bio. Please try again later.');
+										$('#bio').text('Error loading bio. Please try again later.')
 									}
 								});
 							});
