--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<form method="post" action="#">
+							<form method="post" action="https://formspree.io/f/mrbzvbyy">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
