--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 							<article class="post featured">
 								<header class="major">
 									<!-- <span class="date">April 25, 2017</span> -->
-									<h2><a href="https://github.com/menu-ify/menu-ify-fe">Menu-ify<br />
+									<h2><a href="https://github.com/menu-ify/menu-ify-fe" target="_blank">Menu-ify<br />
 									</a></h2>
 									<p>App allowing restaurants to easily create mobile-friendly menus so diners can enjoy the best possible experience</p>
 								</header>
-								<a href="https://github.com/menu-ify/menu-ify-fe" class="image main"><img src="images/menu_photo.jpeg" alt="" /></a>
+								<a href="https://github.com/menu-ify/menu-ify-fe" target="_blank" class="image main"><img src="images/menu_photo.jpeg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/menu-ify/menu-ify-fe" target="_blank" class="button large">View Project</a></li>
 								</ul>
@@ -85,52 +85,52 @@
 								<article>
 									<header>
 										<!-- <span class="date">April 24, 2017</span> -->
-										<h2><a href="https://github.com/gabrielcnunez/lunch_and_learn">Lunch <br />
+										<h2><a href="https://github.com/gabrielcnunez/lunch_and_learn" target="_blank">Lunch <br />
 										and Learn</a></h2>
 									</header>
-									<a href="https://github.com/gabrielcnunez/lunch_and_learn" class="image fit"><img src="images/lunch-learn.jpeg" alt="" /></a>
+									<a href="https://github.com/gabrielcnunez/lunch_and_learn" target="_blank" class="image fit"><img src="images/lunch-learn.jpeg" alt="" /></a>
 									<p>Back end service consuming external APIs and aggregating data to expose endpoints for use by front end application.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/gabrielcnunez/lunch_and_learn" class="button">View Project</a></li>
+										<li><a href="https://github.com/gabrielcnunez/lunch_and_learn" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<!-- <span class="date">April 22, 2017</span> -->
-										<h2><a href="https://github.com/gabrielcnunez/tea_for_one">Tea<br />
+										<h2><a href="https://github.com/gabrielcnunez/tea_for_one" target="_blank">Tea<br />
 										for One</a></h2>
 									</header>
-									<a href="https://github.com/gabrielcnunez/tea_for_one" class="image fit"><img src="images/tea_cup.jpeg" alt="" /></a>
+									<a href="https://github.com/gabrielcnunez/tea_for_one" target="_blank" class="image fit"><img src="images/tea_cup.jpeg" alt="" /></a>
 									<p>
 										Rails API application for a fictional tea subscription service, built to simulate a take-home techincal challenge
 										required to be complete within eight-hour time box.
 									</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/gabrielcnunez/tea_for_one" class="button">View Project</a></li>
+										<li><a href="https://github.com/gabrielcnunez/tea_for_one" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<!-- <span class="date">April 18, 2017</span> -->
-										<h2><a href="https://github.com/gabrielcnunez/spring-assignment-quiz-api-gabrielcnunez">Quiz<br />
+										<h2><a href="https://github.com/gabrielcnunez/spring-assignment-quiz-api-gabrielcnunez" target="_blank">Quiz<br />
 										API</a></h2>
 									</header>
-									<a href="https://github.com/gabrielcnunez/spring-assignment-quiz-api-gabrielcnunez" class="image fit"><img src="images/quiz.jpeg" alt="" /></a>
+									<a href="https://github.com/gabrielcnunez/spring-assignment-quiz-api-gabrielcnunez" target="_blank" class="image fit"><img src="images/quiz.jpeg" alt="" /></a>
 									<p>Java with Spring RESTful API with basic CRUD functionality for creating, modify, and deleting quiz questions. </p>
 									<ul class="actions special">
-										<li><a href="https://github.com/gabrielcnunez/spring-assignment-quiz-api-gabrielcnunez" class="button">View Project</a></li>
+										<li><a href="https://github.com/gabrielcnunez/spring-assignment-quiz-api-gabrielcnunez" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<!-- <span class="date">April 14, 2017</span> -->
-										<h2><a href="https://github.com/gabrielcnunez/text-notification-python">Notify<br />
+										<h2><a href="https://github.com/gabrielcnunez/text-notification-python" target="_blank">Notify<br />
 										Me</a></h2>
 									</header>
-									<a href="https://github.com/gabrielcnunez/text-notification-python" class="image fit"><img src="images/texting.jpeg" alt="" /></a>
+									<a href="https://github.com/gabrielcnunez/text-notification-python" target="_blank" class="image fit"><img src="images/texting.jpeg" alt="" /></a>
 									<p>Application containing seven endpoints for creating, reading, and updating templates and notifications, along with robust testing for both happy and sad user paths.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/gabrielcnunez/text-notification-python" class="button">View Project</a></li>
+										<li><a href="https://github.com/gabrielcnunez/text-notification-python" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<!-- <article>
