--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<form method="post" action="#">
+							<form method="post" action="https://formspree.io/f/mrbzvbyy">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
