Update tea for one image and description

--- a/index.html
+++ b/index.html
@@ -173,12 +173,12 @@
               href="https://github.com/gabrielcnunez/tea_for_one"
               target="_blank"
               class="image fit"
-              ><img src="images/tea_cup.jpeg" alt=""
+              ><img src="images/tea.jpg" alt="clear glass cup with tea near brown ceramin teapot"
             /></a>
             <p>
-              Rails API application for a fictional tea subscription service,
+              Rails API application for a tea subscription service,
               built to simulate a take-home techincal challenge required to be
-              complete within eight-hour time box.
+              completed within eight-hour time box.
             </p>
             <ul class="actions special">
               <li>
