Add favicon to page views

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/about.css" />
+    <link rel="icon" type="image/png" href="/images/tp-cave-symbol.png">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <noscript
       ><link rel="stylesheet" href="assets/css/noscript.css"
