--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="icon" type="image/png" href="/images/tp-cave-symbol.png">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <noscript
       ><link rel="stylesheet" href="assets/css/noscript.css"
