--- a/index.html
+++ b/index.html
@@ -126,6 +126,30 @@
         <!-- Posts -->
         <section class="posts">
           <article>
+                  <header>
+          <!-- <span class="date">April 11, 2017</span> -->
+          <h2><a href="https://github.com/gabrielcnunez/org-dashboard" target="_blank">Organization<br />
+                    Dashboard</a></h2>
+                  </header>
+                  <a href="https://github.com/gabrielcnunez/org-dashboard" target="_blank" class="image fit"><img src="images/meeting.jpeg" alt="" /></a>
+                  <p>Full stack application built for use by a multi-company organization to track companies, employees, teams, and projects.</p>
+                  <ul class="actions special">
+                    <li><a href="https://github.com/gabrielcnunez/org-dashboard" target="_blank" class="button">View Project</a></li>
+          </ul>
+                </article>
+          <article>
+                  <header>
+          <!-- <span class="date">April 7, 2017</span> -->
+          <h2><a href="https://github.com/gabrielcnunez/whos-who" target="_blank">Guess The<br />
+                    Artist</a></h2>
+                  </header>
+                  <a href="https://github.com/gabrielcnunez/whos-who" target="_blank" class="image fit"><img src="images/headphones.jpeg" alt="" /></a>
+                  <p>Angular project interfacing with Spotify API for music guessing game, including integrated audio samples with playback control for enhanced user experience.</p>
+                  <ul class="actions special">
+                    <li><a href="https://github.com/gabrielcnunez/whos-who" target="_blank" class="button">View Project</a></li>
+                  </ul>
+                </article>
+          <article>
             <header>
               <!-- <span class="date">April 24, 2017</span> -->
               <h2>
@@ -259,30 +283,6 @@
               </li>
             </ul>
           </article>
-          <!-- <article>
-									<header> -->
-          <!-- <span class="date">April 11, 2017</span> -->
-          <!-- <h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li> -->
-          <!-- </ul>
-								</article> -->
-          <!-- <article>
-									<header> -->
-          <!-- <span class="date">April 7, 2017</span> -->
-          <!-- <h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
-									</ul>
-								</article> -->
         </section>
 
         <!-- Footer -->
